--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
-    "express": "4.15.4",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "3.0.0",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
-    "moment": "2.18.1",
-    "node-sass": "4.14.1",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "normalize.css": "7.0.0",
     "raf": "3.3.2",
-    "react": "16.0.0",
+    "react": "^16.13.1",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
-    "react-dom": "16.0.0",
+    "react-dom": "^16.13.1",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "5.2.0",
-    "react-test-renderer": "16.0.0",
+    "react-test-renderer": "^16.13.1",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
